[package]
name = "graze"
version = "0.1.0"
authors = ["Sargo"]
edition = "2021"
publish = false

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
once_cell = "1.15"
replace_with = "0.1.7"
chrono = "0.4.26"
bincode = "1.3.3"
fuse-rust = "0.3.1"
itertools = "0.11.0"
iced = "0.12.1"
smol_str = "0.2.2"
lazy_static = "1.4.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
async-std = "1.0"
directories-next = "2.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version = "0.3", features = ["Window", "Storage"] }
wasm-timer = "0.2"

[package.metadata.deb]
assets = [
    ["target/release-opt/todos", "usr/bin/iced-todos", "755"],
    ["iced-todos.desktop", "usr/share/applications/", "644"],
]
